# foxy_engine

./: Cargo.toml  README.md
.cargo/: config.toml
foxy/: Cargo.toml  README.md  build.rs
foxy/foxy-ecs/: Cargo.toml
foxy/foxy-ecs/src/: component.rs  entity.rs  lib.rs
foxy/foxy-macro/: Cargo.toml
foxy/foxy-macro-derive/: Cargo.toml
foxy/foxy-macro-derive/src/: lib.rs
foxy/foxy-macro/src/: lib.rs
foxy/res/shaders/: simple_shader.wgsl
foxy/src/: app.rs  graphics.rs  lib.rs  log.rs  mesh.rs  state.rs  util.rs  vertex.rs  world.rs
foxy/src/app/: state.rs
foxy/src/graphics/: mesh.rs  renderer.rs  vertex.rs
foxy/src/util/: error.rs  log.rs
sandbox/: Cargo.toml
sandbox/src/: main.rs
