[package]
name = "foxy"
version = "0.1.0"
edition = "2021"
authors = ["gtlugo"]
description = "A work in progress simple engine for apps. Not meant to be anything amazing."
repository = "https://github.com/GTLugo/foxy_engine"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# logging
tracing = "0.1.*"
tracing-subscriber = "0.2.*"
tracing-unwrap = "0.9.*"
log = "0.4.*"
env_logger = "0.9.*"
colored = "2.0.*"

# engine
glium = "0.30.*"
#winit_input_helper = "*"