[package]
name = "foxy"
version = "0.2.0"
edition = "2021"
authors = ["gtlugo"]
description = "A work in progress simple engine for apps. Not meant to be anything amazing."
repository = "https://github.com/GTLugo/foxy_engine"
readme = "README.md"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
#wgpu = "0.12.*"
#shaderc = "0.8.*"

[dependencies]
# rendering
winit = "0.26.*"
wgpu = "0.12.*"

# utilities
tokio = { version = "1.17.*", features = ["full"] }
stopwatch = "0.0.*"
rand = "0.8.*"
glam = { version = "0.20.*", features = ["bytemuck"] }
rgb = { version = "0.8.*", features = ["bytemuck"] }
bytemuck = { version = "1.9.*", features = [ "derive" ] }
thiserror = "1.0.*"
anyhow = "1.0.*"

# logging
tracing = "0.1.*"
tracing-subscriber = "0.3.*"
tracing-unwrap = "0.9.*"
env_logger = "0.9.*"
log = "0.4.*"
colored = "2.0.*"

#[target.'cfg(target_arch = "wasm32")'.dependencies]
#wgpu = { version = "0.12.*", features = ["webgl"]}
#wasm-bindgen = "0.2.*"
#web-sys = { version = "0.3.*", features = [
#    "Document",
#    "Window",
#    "Element",
#]}
#console_error_panic_hook = "0.1.*"
#console_log = "0.2.*"