[package]
name = "foxy-ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foxy-macro = { path = "../foxy-macro" }
foxy-macro-derive = { path = "../foxy-macro-derive" }

uuid = { version = "1.1.*", features = ["v4", "fast-rng"] }
lazy_static = "1.4.*"

# logging
tracing = "0.1.*"
tracing-subscriber = "0.3.*"
tracing-unwrap = "0.9.*"
env_logger = "0.9.*"
log = "0.4.*"
colored = "2.0.*"